Add workflow with manual trigger

--- a/TEC and 4C/.github/workflows/run-script.yml
+++ b/TEC and 4C/.github/workflows/run-script.yml
@@ -22,4 +22,4 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Run script
-        run: python "TEC script.py"
+        run: python scripts/TEC_script.py
