--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.x'
       - name: Install dependencies
-        run: pip install pandas openpyxl requests
+        run: pip install pandas openpyxl requests Office365-REST-Python-Client
       - name: Run script
         run: python "TEC and 4C/scripts/TEC_script.py"
       - name: Commit and push changes
